# ezshare

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: start.sh
ezshare/: __main__.py
scripts/: release.sh
