[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ezshare"
version = "0.0.11"
authors = [
  { name="Andrew 'Necromant' Andrianov", email="andrew@ncrmnt.org" },
]
description = "A simple library and commandline tool to access EzShare WiFi SD Cards"
readme = "README.md"
license = { file="LICENSE.TXT" }
requires-python = ">=3.7"
dependencies = [
    "requests>=2", 
    "lxml>=4.6", 
    "tqdm>=4.6",
    "parse>=1.18"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
    "Operating System :: OS Independent",
]

[project.scripts]
ezshare-cli = "ezshare:__main__.main"

[project.urls]
"Homepage" = "https://github.com/nekromant/python-ezshare"
"Bug Tracker" = "https://github.com/nekromant/python-ezshare/issues"

[tool.setuptools]
packages = ["ezshare"]